# validation-prototype

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CONTRIBUTING.md  README.md  cabal.project  haddock.css  travis.project
ci/: ci.nix  jobsets.json  jobsets.nix
consumer-data-au-api-bank/: consumer-data-au-api-bank.cabal  consumer-data-au-api-bank.nix  consumer-data-au-api-types.cabal  consumer-data-au-lambdabank.nix
consumer-data-au-api-bank/ci/: ci.nix  jobsets.json
consumer-data-au-api-bank/src/: Main.hs
consumer-data-au-api-bank/src/LambdaBank/: Main.hs
consumer-data-au-api-bank/src/Web/ConsumerData/Au/LambdaBank/: FakeData.hs
consumer-data-au-api-bank/tests/Web/ConsumerData/Au/LambdaBank/Common/: CustomerTest.hs
consumer-data-au-api-client/: .dir-locals.el  ChangeLog.md  LICENSE  README.md  ci.nix  consumer-data-au-api-client.cabal  consumer-data-au-api-client.nix  default.nix  shell.nix
consumer-data-au-api-client/nix/: consumer-data-au-api-client-overrides.nix  haskellPackages.nix
consumer-data-au-api-client/src/Web/ConsumerData/Au/Api/: Client.hs
consumer-data-au-api-types/: ChangeLog.md  README.md  ci.nix  consumer-data-au-api-types.cabal  consumer-data-au-api-types.nix  default.nix  shell.nix
consumer-data-au-api-types/nix/: consumer-data-au-api-types-overrides.nix  haskellPackages.nix  jose.json  jose.nix  servant-waargonaut.json  servant-waargonaut.nix  servant-waargonaut.update.sh
consumer-data-au-api-types/scripts/: test  test-loop
consumer-data-au-api-types/src/: .dir-locals.el
consumer-data-au-api-types/src/Aeson/: Helpers.hs
consumer-data-au-api-types/src/AuPost/: PAF.hs
consumer-data-au-api-types/src/AuPost/PAF/: FlatType.hs  FloorType.hs  PostalDeliveryType.hs  StateType.hs  StreetSuffix.hs  StreetType.hs
consumer-data-au-api-types/src/Country/: Waargonaut.hs
consumer-data-au-api-types/src/Crypto/JWT/: Cdr.hs  Pretty.hs
consumer-data-au-api-types/src/Data/GADT/: Aeson.hs
consumer-data-au-api-types/src/Data/GADT/Aeson/: TH.hs
consumer-data-au-api-types/src/Data/GADT/Tag/: TH.hs
consumer-data-au-api-types/src/Data/Time/: Waargonaut.hs
consumer-data-au-api-types/src/Data/Vector/: V5.hs  V6.hs
consumer-data-au-api-types/src/Waargonaut/: Helpers.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/: Client.hs  Types.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/Types/: Auth.hs  Banking.hs  Common.hs  Request.hs  Response.hs  Stub.hs  SumTypeHelpers.hs  Tag.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/Types/Auth/: AuthApi.hs  AuthorisationRequest.hs  Common.hs  Error.hs  OpApi.hs  Registration.hs  Response.hs  TokenRequest.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/Types/Banking/: Accounts.hs  Common.hs  Payees.hs  Products.hs  Types.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/Types/Common/: Customer.hs
consumer-data-au-api-types/src/Web/ConsumerData/Au/Api/Types/Data/: CommonFieldTypes.hs  Currency.hs  PhysicalAddress.hs
consumer-data-au-api-types/tests/: .dir-locals.el  AesonGolden.hs  WaaaargonautTest.hs  WaargoRoundTrip.hs
consumer-data-au-api-types/tests/AuPost/PAF/: Gens.hs
consumer-data-au-api-types/tests/Country/: Gens.hs
consumer-data-au-api-types/tests/Data/Text/: Gens.hs
consumer-data-au-api-types/tests/Data/Time/: Gens.hs
consumer-data-au-api-types/tests/Hedgehog/: Helpers.hs
consumer-data-au-api-types/tests/Text/URI/: Gens.hs
consumer-data-au-api-types/tests/Web/ConsumerData/Au/Api/Types/: FakeServer.hs  LinkTestHelpers.hs  PrismTestHelpers.hs  RequestTest.hs  ResponseTest.hs
consumer-data-au-api-types/tests/Web/ConsumerData/Au/Api/Types/Auth/: CommonTest.hs  Gens.hs  RegistrationTest.hs  RequestTest.hs  compact-authorisation-request.golden  compact-registration-request.golden  jwk.json  ssa.b64
consumer-data-au-lambdabank/: .gitignore  README.md  ci.nix  consumer-data-au-lambdabank.cabal  consumer-data-au-lambdabank.nix  default.nix  docker.nix
consumer-data-au-lambdabank/ci/: ci.nix  jobsets.json  jobsets.nix
consumer-data-au-lambdabank/exe/: Main.hs
consumer-data-au-lambdabank/nix/: consumer-data-au-lambdabank-overrides.nix  haskellPackages.nix
consumer-data-au-lambdabank/res/: cdr-standards-client.html  index.html
consumer-data-au-lambdabank/scripts/: dockerisation.sh  dockerize.sh  test-loop
consumer-data-au-lambdabank/src/: .dir-locals.el
consumer-data-au-lambdabank/src/Data/: Coproduct.hs
consumer-data-au-lambdabank/src/Data/Functor/: Coproduct.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/: AuthModel.hs  FakeData.hs  LambdaModel.hs  Main.hs  Model.hs  Server.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/Alien/Servant/: Server.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/Server/: Auth.hs  Banking.hs  Common.hs  Internal.hs  State.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/Server/Auth/: Model.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/Server/Banking/: Accounts.hs  Payees.hs  Products.hs
consumer-data-au-lambdabank/src/Web/ConsumerData/Au/LambdaBank/Server/Common/: Customer.hs
consumer-data-au-lambdabank/tests/: .dir-locals.el
consumer-data-au-lambdabank/tests/Web/ConsumerData/Au/LambdaBank/: WithServer.hs
consumer-data-au-lambdabank/tests/Web/ConsumerData/Au/LambdaBank/Banking/: AccountsTest.hs  PayeesTest.hs  ProductsTest.hs
consumer-data-au-lambdabank/tests/Web/ConsumerData/Au/LambdaBank/Common/: CustomerTest.hs
consumer-data-au-mock-consumer/: .gitignore  default.nix
consumer-data-au-mock-consumer/backend/: backend.cabal
consumer-data-au-mock-consumer/backend/src/: Backend.hs
consumer-data-au-mock-consumer/common/: shell.nix
consumer-data-au-mock-consumer/common/src/Common/: Api.hs  Route.hs
consumer-data-au-mock-consumer/frontend/: frontend.cabal  shell.nix
consumer-data-au-mock-consumer/frontend/src/: Frontend.hs
consumer-data-au-mock-consumer/nix/: consumer-data-au-mock-consumer-overrides.nix
nix/: hie-nix.843.json  hie-nix.nix  nixpkgs.nix
(+89 files in other folders)
